--- a/AminoBot/AminoBot.csproj
+++ b/AminoBot/AminoBot.csproj
@@ -8,6 +8,8 @@
       <Project>{6648E4F3-CA43-47AD-9EB6-7D5ED97FD333}</Project>
       <Name>AminoApi</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CleverBotApi\CleverBotApi.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Cleverbot" Version="1.0.0" />
   </ItemGroup>
 </Project>
